Improve design based on source page

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="third-section">
         <div class="third-section-content-div">
             <div class="quote">When I'm a king, I'll hunt the monsters down and slay them all! Just as you did, Father." "A wise king never seeks out war, but... he must always be ready for it." "I'm ready, Father."</div>
-            <div class="author">-Thor, God of Thunder</div>
+            <div class="author">-Odin, God of War</div>
         </div>
     </div>
 
